force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__EngagementAnalysisTextServiceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAnalysisTextServiceType__c</fullName>
    <label>Engagement Analysis Text Service Type Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementAnalysisTextServiceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>