force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__EngagementChannelSourceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelSourceType__c</fullName>
    <label>Engagement Channel Source Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelSourceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>