force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__ParsedResponseText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParsedResponseText__c</fullName>
    <label>Parsed Response</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParsedResponseText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>