force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__RawResponseText__c.field-meta.xml
<CustomField>
    <fullName>ssot__RawResponseText__c</fullName>
    <label>Raw Response</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RawResponseText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>