force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__rel_1718546696917_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718546696917_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAnalysisTextInsight_Engage_rel</label>
    <referenceTo>ssot__EngagementAnalysisText__dlm</referenceTo>
    <relationshipLabel>EngagementAnalysisTextInsight_Engage_rel</relationshipLabel>
    <relationshipName>rel_1718546696917_end</relationshipName>
    <type>Lookup</type>
</CustomField>