force-app/main/default/objects/ssot__EngagementAnalysisTextInsight__dlm/fields/ssot__TextAnalysisInsightType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TextAnalysisInsightType__c</fullName>
    <label>Text Analysis Insight Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TextAnalysisInsightType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>